# stemplot

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: Heatmap tutorial.ipynb  plot logo for stemplot.ipynb
notebooks/: color_tutorials.ipynb  fonts.ipynb  layout tutorials.ipynb  styles.ipynb
stemplot/: __init__.py  _axes.py  _chord_digram.py  _gradient_patch.py  _layout.py  _misc.py  _svg2mpl.py
stemplot/arrows/: __init__.py  _arrows.py  _flow_arrows.py  _more_arrows.py  _progressive_arrows.py
stemplot/axes/: __init__.py  _ax_bg.py  _labels.py  _spines.py  _ticks.py
stemplot/colors/: __init__.py  _color_data.py  _colormaps.py  _colors.py  _colors_labels.py
stemplot/cplot/: _colorize.py  _colorize_oklab.py  _cplot.py
stemplot/fonts/: __init__.py  _utils.py
stemplot/gantt/: _gantt.py
stemplot/gaomeng/: 4dstem.py  4dstem_v2.py  com_xy.py
stemplot/interactive/: __init__.py  _data_explorer.py  _data_labelling.py  _data_slicer.py  _interactive_GMM_single.py  _interactive_cursor.py  _interactive_gmm_oversampling.py  _interactive_layout.py  _interactive_patch_size.py  _interactive_signals.py  _interactive_spectra.py  _interactive_t.py  _interactive_t_v2.py  _interactive_threshold.py  _interative_GMM.py
stemplot/interative/: __init__.py  interactive_manifold.py  interactive_signals.py  interative_create_training_data.py  interative_duane.py  interative_layout.py  lasso_mask.py  scatter_inds.py
stemplot/io/: __init__.py  _files.py
stemplot/layout/: __init__.py  _layout.py  (+3 more)
tests/: test_utils.py
(+35 files in other folders)
