[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemplot"
version = "0.1.0"
description = "A Python library for scientific plot"
authors = [{ name = "Jiadong Dan", email = "jiadong.dan@u.nus.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["stemplot", "visualization", "STEM", "microscopy"]
dependencies = [
    "numpy>=1.18.0",
    "matplotlib>=3.10.0",
    "mpl_chord_diagram",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/jiadongdan/stemplot"

[tool.setuptools.packages.find]
where = ["."]
include = ["stemplot*"]
